--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Add this above your weather card -->
+<div id="loading" class="hidden">
+  <p>Loading weather data...</p>
+</div>
   <div class="container">
     <h1>Weather Finder</h1>
     
